@@ -291,11 +291,11 @@ config:
       LayoutEngineNameVersion              : 'Blink 39.0'
       LayoutEngineNameVersionMajor         : 'Blink 39'
       AgentClass                           : 'Browser'
-      AgentName                            : 'Chrome'
+      AgentName                            : 'Chromium'
       AgentVersion                         : '39.0.2171.65'
       AgentVersionMajor                    : '39'
-      AgentNameVersion                     : 'Chrome 39.0.2171.65'
-      AgentNameVersionMajor                : 'Chrome 39'
+      AgentNameVersion                     : 'Chromium 39.0.2171.65'
+      AgentNameVersionMajor                : 'Chromium 39'
 
 - test:
     input:
@@ -459,11 +459,11 @@ config:
       LayoutEngineNameVersion              : 'AppleWebKit 537.6'
       LayoutEngineNameVersionMajor         : 'AppleWebKit 537'
       AgentClass                           : 'Browser'
-      AgentName                            : 'Chrome'
+      AgentName                            : 'Chromium'
       AgentVersion                         : '23.0.1240.0'
       AgentVersionMajor                    : '23'
-      AgentNameVersion                     : 'Chrome 23.0.1240.0'
-      AgentNameVersionMajor                : 'Chrome 23'
+      AgentNameVersion                     : 'Chromium 23.0.1240.0'
+      AgentNameVersionMajor                : 'Chromium 23'
 
 # Linux Mint
 - test:
