@@ -169,4 +169,5 @@ v3.1
 
 v3.2
 ===
-- Detect SugarLabs, Ubuntu Touch
+- Detect Chromium, SugarLabs, Ubuntu Touch
+
